--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "gulp": "^3.6.2",
     "gulp-browserify": "^0.5.0",
-    "browserify": "^4.1.2"
+    "browserify": "^4.1.2",
+    "pixi": "^0.2.1"
   }
 }
