--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.6.2",
     "gulp-browserify": "^0.5.0",
     "browserify": "^4.1.2",
-    "pixi": "^0.2.1"
+    "pixi": "^0.2.1",
+    "gulp-watch": "^0.6.4"
   }
 }
