--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-browserify": "^0.5.0",
     "browserify": "^4.1.2",
     "pixi": "^0.2.1",
-    "gulp-watch": "^0.6.4"
+    "gulp-watch": "^0.6.4",
+    "gulp-livereload": "^1.5.0"
   }
 }
