--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "homepage": "https://github.com/axelduch/confined",
   "devDependencies": {
+    "browserify": "^4.1.2",
     "gulp": "^3.6.2",
     "gulp-browserify": "^0.5.0",
-    "browserify": "^4.1.2",
-    "pixi": "^0.2.1",
+    "gulp-jshint": "^1.6.1",
+    "gulp-livereload": "^1.5.0",
     "gulp-watch": "^0.6.4",
-    "gulp-livereload": "^1.5.0"
+    "keyboardjs": "^0.4.2",
+    "pixi": "^0.2.1"
   }
 }
