--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-livereload": "^1.5.0",
     "gulp-watch": "^0.6.4",
     "keyboardjs": "^0.4.2",
-    "pixi": "^0.2.1"
+    "gulp-rename": "^1.2.0",
+    "pixi.js": "^1.5.2"
   }
 }
